--- a/src/app/components/game-template/game-template.component.css
+++ b/src/app/components/game-template/game-template.component.css
@@ -3,7 +3,7 @@
   width: 70%;
   position: relative;
   overflow: auto;
-  margin: 40px auto ;
+  margin: 20px auto ;
   
 }
 .btns{
@@ -97,6 +97,7 @@ height: 100%;
   z-index: 2;
   justify-content: end;
   margin-bottom: 12px;
+  margin-top: 12px;
   margin-right: 12px;
 }
 
