--- a/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/admin-dashboard/admin-dashboard.component.css
@@ -109,17 +109,22 @@ body {
     padding: 4px 10px;
     width: fit-content;
 }
-
+a{
+  text-decoration: none;
+}
 .account .account-img {
     border: 3px solid rgba(255, 255, 255, 0.89);
     border-radius: 50%;
     overflow: hidden;
     width: 40px;
     height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .account-img img {
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     height: 100%;
 }
