--- a/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
@@ -8,12 +8,13 @@
     <a routerLink="/admin-dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
       <i class="bi bi-bar-chart"></i>
-      <p> 
+      <p>
         Dashboard
       </p>
     </a>
 
-    <a routerLink="/app-admin-orders" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
+    <a routerLink="/app-admin-orders" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+      class="nav-link">
       <i class="bi bi-plus-circle-dotted"></i>
       <p>
         Orders
@@ -31,9 +32,13 @@
       <p>
         Feed Back
       </p>
+    </a><a style="background-color: rgba(255, 0, 0, 0.589); color: white; cursor: pointer;" class="nav-link"
+      (click)="signOut()">
+      <i class="bi bi-plus-circle-dotted"></i>
+      <p>Logout</p>
     </a>
+
 
   </div>
   <p style="font-size: 0.8rem">&#169;Patarif - 2022</p>
 </div>
-
