--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Right Side (Search + Avatar) -->
-    <div class="d-flex align-items-center gap-3 user-menu">he
+    <div class="d-flex align-items-center gap-3 user-menu">
       <i (click)="openSearch()" class="bi bi-search fs-5 search-icon"></i>
 
       <div class="dropdown" [class.show]="menuOpen">
