fix product details

--- a/src/app/components/pages/shop/product-details/product-details.component.html
+++ b/src/app/components/pages/shop/product-details/product-details.component.html
@@ -1,8 +1,8 @@
 <!-- <app-background></app-background> -->
 <app-stars-background></app-stars-background>
-<app-stars-background [top]="80"></app-stars-background>
+<!-- <app-stars-background [top]="80"></app-stars-background> -->
 <app-lines-background></app-lines-background>
-<app-lines-background [top]="80"></app-lines-background>
+<!-- <app-lines-background [top]="80"></app-lines-background> -->
 
 <!-- <div class="background-lines">
     <div class="background"><img src="images/shopping/background.png" alt="background"></div>
@@ -12,12 +12,7 @@
 <div class="content">
 
     <!-- ✅ Loading Spinner -->
-    <div *ngIf="loading" class="loading-overlay">
-        <div class="loading-box">
-            <div class="spinner"></div>
-            <p>Loading products...</p>
-        </div>
-    </div>
+  <app-loading *ngIf="loading"></app-loading>
 
     <ng-container *ngIf="!loading">
 
@@ -109,7 +104,7 @@
 
                 </div>
 
-                <button (click)="addToCart()" *ngIf="selectedSize != null" class="btn btn-primary">Add to cart
+                <button (click)="handleAddToCart($event)" *ngIf="selectedSize != null" class="btn btn-primary">Add to cart
                     <span></span></button>
                 <div *ngIf="selectedSize == null" class="btn btn-primary-outline">select <span *ngIf="selectedColor
              == null">[color] </span> <span *ngIf="selectedSize == null">[size]</span></div>
@@ -129,6 +124,5 @@
 </div>
 
 <div *ngIf="!loading">
-
     <app-home-footer></app-home-footer>
 </div>
