--- a/src/app/components/pages/games/guess-eemoji/guess-eemoji.component.html
+++ b/src/app/components/pages/games/guess-eemoji/guess-eemoji.component.html
@@ -8,10 +8,12 @@
   [totalQuestions]="questions.length"
 >  
   <div class="game-layout">
-    <div class="card-title">  
-      Devinez la signification !
+     <!-- ===== QUESTION SECTION ===== -->
+    <div class="question-section">
+      <div class="card-title">
+        Devinez la signification !
+      </div>
     </div>
-  
     <!-- ===== QUESTION SECTION ===== -->
     <div class="question-section">
     
