--- a/src/app/components/pages/games/letters-game/letters-game.component.html
+++ b/src/app/components/pages/games/letters-game/letters-game.component.html
@@ -86,13 +86,14 @@
  
 
   </div>
+
+  <app-celebration 
+    *ngIf="showLevelCompleteModal"
+    [show]="showLevelCompleteModal"
+    [nextLevel]="level + 1"
+    [data]="celebrationData"
+    (close)="onCloseCelebration()"
+    (goToNext)="continueToNextLevel($event)">
+  </app-celebration>
 </app-game-template>
 
-<!-- Celebration Modal (moved outside app-game-template) -->
-<app-celebration 
-  [show]="showLevelCompleteModal"
-  [nextLevel]="level + 1"
-  [data]="celebrationData"
-  (close)="onCloseCelebration()"
-  (goToNext)="continueToNextLevel($event)">
-</app-celebration>
