--- a/src/app/components/pages/games/paint/canvas/canvas.component.html
+++ b/src/app/components/pages/games/paint/canvas/canvas.component.html
@@ -1,7 +1,9 @@
 <app-game-template 
   [showHeader]="false" 
   [showTopIcons]="false" 
-  [noCardBackground]="true">  
+  [noCardBackground]="true"
+  [nogamecontent]="true"
+  >  
 
   <div class="container">
     <!-- Top Logo -->
