--- a/src/app/components/pages/games/sort-words/sort-words.component.html
+++ b/src/app/components/pages/games/sort-words/sort-words.component.html
@@ -7,8 +7,12 @@
   <div class="container d-flex justify-content-center align-items-center py-4">
    
     <div class="game-card">
-      <h2 class="card-title">Arrange the Sentence</h2>
-
+  <!-- ===== QUESTION SECTION ===== -->
+    <div class="question-section">
+      <div class="card-title">
+        Arrange the Sentence
+      </div>
+    </div>
       <div class="card-body">
         
         <!-- Instructions -->
