--- a/src/app/components/pages/games/matchint-words/matchint-words.component.html
+++ b/src/app/components/pages/games/matchint-words/matchint-words.component.html
@@ -5,7 +5,11 @@
   [difficulty]="currentDifficulty"
 > 
     <div class="game-card mx-auto">
-             <h2 class="card-title ">Match the Words with Emojis</h2>          
+      <div class="question-section">
+        <div class="card-title">
+            Match the Words with Emojis
+        </div>
+      </div>          
           <div class="matching-area">
             <!-- Words Column -->
             <div class="column">
