--- a/src/app/components/pages/games/paint/canvas/canvas.component.css
+++ b/src/app/components/pages/games/paint/canvas/canvas.component.css
@@ -3,7 +3,7 @@
 .container{
 border: #000000 1px solid;
 overflow:hidden;
-border-radius: 40px;
+border-radius: 18px;
 
 }
 
@@ -18,8 +18,8 @@ border-radius: 40px;
 }
 
 .logo-image {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border-radius: 6px;
 }
 
@@ -34,8 +34,8 @@ border-radius: 40px;
 /* Main Container */
 .main-container {
   display: flex;
-  flex: 1;
- 
+  flex: 2;
+
   align-items: center;
   justify-content: center;
 }
@@ -56,19 +56,19 @@ border-radius: 40px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     border: 2px solid #e0e0e0;
-    width: 600px;
-    height: 380px;
+    width: 95%;
+    height: 70vh;
+    max-width: 1200px;
+    max-height: 800px;
+    margin: 20px auto;
   }
 
   .drawing-canvas {
     display: block;
     cursor: crosshair;
-    background-image: 
-      linear-gradient(rgba(0, 0, 0, 0.1) 1px, transparent 1px),
-      linear-gradient(90deg, rgba(0, 0, 0, 0.1) 1px, transparent 1px);
-    background-size: 20px 20px;
     background-color: white;
-  
+    width: 100%;
+    height: 100%;
   }
 
 /* Right Toolbar */
@@ -439,7 +439,7 @@ i{
   }
   
   .main-container {
-    padding: 80px 10px 100px 10px;
+    padding: 80px 10px 20px 10px;
     gap: 15px;
   }
   
@@ -453,7 +453,7 @@ i{
     padding: 10px 12px;
   }
   
-  .tool-btn {
+  .tool-btn,.line-size-control {
     width: 40px;
     height: 40px;
     font-size: 14px;
@@ -462,6 +462,7 @@ i{
   .bottom-palette {
     padding: 12px 15px;
     gap: 15px;
+
   }
   
   .color-swatch,
